--- a/Views/Receipts/Create.cshtml
+++ b/Views/Receipts/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LvlUp.Models.Receipt
 
 @{
-    ViewData["Title"] = "Create Receipt";
+    ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
@@ -12,11 +12,6 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PurchaseDate" class="control-label"></label>
-                <input asp-for="PurchaseDate" class="form-control" />
-                <span asp-validation-for="PurchaseDate" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Cpf" class="control-label"></label>
                 <input asp-for="Cpf" class="form-control" />
@@ -37,14 +32,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
+                <p class="form-control-plaintext">@Model.CreatedAt.ToString("dd/MM/yyyy HH:mm:ss")</p>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
