--- a/Views/Receipts/Delete.cshtml
+++ b/Views/Receipts/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LvlUp.Models.Receipt
 
 @{
-    ViewData["Title"] = "Delete Receipt";
+    ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
@@ -11,12 +11,6 @@
     <h4>Receipt</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PurchaseDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PurchaseDate)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cpf)
         </dt>
@@ -51,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
