--- a/Views/Receipts/Details.cshtml
+++ b/Views/Receipts/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LvlUp.Models.Receipt
 
 @{
-    ViewData["Title"] = "Receipt Details";
+    ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
@@ -10,12 +10,6 @@
     <h4>Receipt</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PurchaseDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PurchaseDate)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cpf)
         </dt>
@@ -49,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
-    <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
