--- a/Views/Receipts/Edit.cshtml
+++ b/Views/Receipts/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LvlUp.Models.Receipt
 
 @{
-    ViewData["Title"] = "Edit Receipt";
+    ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
@@ -13,11 +13,6 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="PurchaseDate" class="control-label"></label>
-                <input asp-for="PurchaseDate" class="form-control" />
-                <span asp-validation-for="PurchaseDate" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Cpf" class="control-label"></label>
                 <input asp-for="Cpf" class="form-control" />
@@ -40,14 +35,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
+                <p class="form-control-plaintext">@Model.CreatedAt.ToString("dd/MM/yyyy HH:mm:ss")</p>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
