--- a/Views/Receipts/Index.cshtml
+++ b/Views/Receipts/Index.cshtml
@@ -1,20 +1,17 @@
 ﻿@model IEnumerable<LvlUp.Models.Receipt>
 
 @{
-    ViewData["Title"] = "Receipt Index";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Receipts Index</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Adicionar Item</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PurchaseDate)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cpf)
             </th>
@@ -37,9 +34,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.PurchaseDate)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Cpf)
             </td>
             <td>
@@ -55,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedAt)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> 
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Detalhes</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Deletar</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
