--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -78,11 +78,11 @@
                         </li>
                     </ul>
                     <!-- Search box centered -->
-                    <div class="d-flex justify-content-center flex-grow-1">
+@*                     <div class="d-flex justify-content-center flex-grow-1">
                         <input type="text" id="searchInput" class="form-control" placeholder="Pesquise algum produto aqui." style="max-width: 400px; width: 50%;" />
                     </div>
 
-                    <div id="searchResults" class="mt-2" style="display: none;"></div>
+                    <div id="searchResults" class="mt-2" style="display: none;"></div> *@
 
                 </div>
                 <!-- Collapsible wrapper -->
