--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -52,8 +52,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SoftwareId" class="control-label"></label>
-                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.PlatformsId"></select>
-                <span asp-validation-for="SoftwareId" class="text-danger"></span>
+                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.SoftwareId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
@@ -65,6 +64,13 @@
                     <input class="form-check-input" asp-for="IsMultiplayer" /> @Html.DisplayNameFor(model => model.IsMultiplayer)
                 </label>
             </div>
+
+            <div class="form-group">
+                <label asp-for="ImagePath" for="imageFile" class="control-label"></label>
+                <input asp-for="ImagePath" type="file" class="form-control" id="imageFile" name="imageFile"  />
+                <span asp-validation-for="ImagePath" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
             </div>
