--- a/Views/Store/GameInfo.cshtml
+++ b/Views/Store/GameInfo.cshtml
@@ -8,22 +8,9 @@
     Layout = "_StoreLayout";
 }
 
-<!-- Estilos CSS para alterar a cor dos títulos -->
-<style>
-    h1, h2, h3, h4 {
-        color: #FFA500; /* Cor Laranja */
-    }
-
-    .add-to-cart-button {
-        display: inline-block; /* Certifica-se de que só o conteúdo da imagem é clicável */
-    }
-
-        .add-to-cart-button img {
-            width: 300px; /* Define um tamanho fixo */
-            height: auto;
-            cursor: pointer; /* Adiciona o cursor de "mãozinha" sobre a imagem */
-        }
-</style>
+@section Styles {
+    <link href="~/css/game-info.css" rel="stylesheet" />
+}
 
 <div class="container mt-5">
     <h1 class="display-4 text-center">@Model.Title</h1>
