--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -4,6 +4,10 @@
     Layout = "_StoreLayout";
 }
 
+@section Styles {
+    <link href="~/css/main-page.css" rel="stylesheet" />
+}
+
 <div class="text-center mt-5">
     <h1 class="display-4 fade-in" style="color: #FFA500;">
         LVL-UP Store,
@@ -82,61 +86,4 @@
             },
         });
     </script>
-}
-
-<style>
-    .swiper-container {
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px 0;
     }
-
-    .swiper-slide {
-        text-align: center;
-    }
-
-    .game-card {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-    }
-
-    .game-image-container {
-        width: 100%;
-        max-width: 300px;
-        height: 200px; /* Ou qualquer altura desejada */
-        background-color: #333; /* Cor sólida de fundo */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        border-radius: 8px;
-    }
-
-    .game-image {
-        max-width: 100%;
-        height: 100%;
-        object-fit: cover; /* Garante que a imagem preencha o contêiner sem distorcer */
-    }
-
-    .game-title {
-        font-size: 1.2rem;
-        color: #333;
-    }
-
-    .search-container {
-        margin-bottom: 20px;
-    }
-
-    .btn-primary {
-        background-color: #FFA500;
-        border-color: #FFA500;
-    }
-
-        .btn-primary:hover {
-            background-color: #FF8800;
-            border-color: #FF8800;
-        }
-</style>
