--- a/wwwroot/css/main-page.css
+++ b/wwwroot/css/main-page.css
@@ -14,6 +14,13 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    background-color: black;
+    border-radius: 10px !important;
+    width: min-content;
+    padding: 20px 
+}
+.game-card img {
+    border-radius: 10px !important;
 }
 
 .game-image-container {
@@ -28,15 +35,13 @@
     border-radius: 8px;
 }
 
-.game-image {
-    max-width: 100%;
-    height: 100%;
-    object-fit: cover; /* Garante que a imagem preencha o contêiner sem distorcer */
+.game-image img {
+    width: 200px !important;
 }
 
 .game-title {
     font-size: 1.2rem;
-    color: #333;
+    color: white;
 }
 
 .search-container {
@@ -48,7 +53,11 @@
     border-color: #FFA500;
 }
 
-    .btn-primary:hover {
-        background-color: #FF8800;
-        border-color: #FF8800;
-    }
+.btn-primary:hover {
+    background-color: #FF8800;
+    border-color: #FF8800;
+}
+
+a {
+    text-decoration: none !important;
+}
