Mais ajustes visuais

--- a/Views/Store/GameInfo.cshtml
+++ b/Views/Store/GameInfo.cshtml
@@ -38,7 +38,7 @@
             <!-- Botão "Adicionar ao Carrinho" com imagem -->
             <div class="mt-4 add-to-cart-button">
                 <a href="@Url.Action("AddToCart", "Cart", new { gameId = Model.Id })">
-                    <img src="~/addtocart.jpg" alt="Adicionar ao Carrinho">
+                    <img src="~/addtocart.png" alt="Adicionar ao Carrinho">
                 </a>
             </div>
         </div>
