--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -10,10 +10,10 @@
 
 <div class="text-center mt-5">
     <h1 class="display-4 fade-in" style="color: #FFA500;">
-        LVL-UP Store,
+        LVL-UP Store
     </h1>
     <p class="fade-in fs-4">
-        a sua loja definitiva para games épicos e aventuras inesquecíveis!
+        A sua loja definitiva para games épicos e aventuras inesquecíveis!
     </p>
     <p class="fade-in fs-6">
         Descubra promoções incríveis, novidades imperdíveis e jogos que vão elevar o seu nível de diversão. 🚀🎮
