initial language change commit

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -57,10 +57,7 @@
                 {
                     <div>
                         <p>
-                            Não há serviços de autenticação externa configurados. Consulte este <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                artigo
-                                sobre como configurar este aplicativo ASP.NET para suportar login via serviços externos
-                            </a>.
+                            Não há serviços de autenticação externa configurados. 
                         </p>
                     </div>
                 }
