--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,17 +1,19 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Excluir dados pessoais";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
+
 
 <h3>@ViewData["Title"]</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>Excluir esses dados removerá permanentemente sua conta, e isso não poderá ser recuperado.</strong>
     </p>
 </div>
+
 
 <div>
     <form id="delete-user" method="post">
@@ -24,9 +26,10 @@
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="w-100 btn btn-lg btn-danger" type="submit">Excluir dados e fechar minha conta</button>
     </form>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
