--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -67,7 +67,7 @@
                     <!-- Botão de Carrinho com imagem maior -->
                     <a href="@Url.Action("Index", "Cart")" class="text-reset me-3">
                         <button class="btn">
-                            <img src="~/shoppingcart.png" alt="Carrinho" style="width: 40px; height: auto;" />
+                            <img src="~/cart.png" alt="Carrinho" style="width: 40px; height: auto;" />
                         </button>
                     </a>
 
