change default style color for h1, h2, h3 and h4

--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Esqueceu sua senha?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Digite seu e-mail.</h2>
+<h1 style="color: #FFA500;">@ViewData["Title"]</h1>
+<h2 style="color: #FFA500;">Digite seu e-mail.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
