--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h1>Gerencie sua conta</h1>
+<h1 style="color: #FFA500;">Gerencie sua conta</h1>
 
 <div>
-    <h2>Altere as configurações da sua conta</h2>
+    <h2 style="color: #FFA500;">Altere as configurações da sua conta</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
