--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Reenviar confirmação de e-mail";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Digite seu e-mail.</h2>
+<h1 style="color: #FFA500;">@ViewData["Title"]</h1>
+<h2 style="color: white">Digite seu e-mail.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
