--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,29 +5,29 @@
     ViewData["Title"] = "Entrar";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color: #FFA500;">@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use uma conta local para entrar.</h2>
+                <h2 style="color: white;">Faça login com sua conta local.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
+                    <label asp-for="Input.Email" class="form-label">E-mail</label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
+                    <label asp-for="Input.Password" class="form-label">Senha</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
                     <div class="checkbox">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            Lembrar-me
                         </label>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                         <a id="forgot-password" asp-page="./ForgotPassword">Esqueceu sua senha?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Cadastrar-se como um novo usuário</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Cadastrar-se como novo usuário</a>
                     </p>
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar confirmação de e-mail</a>
@@ -50,14 +50,14 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use outro serviço para entrar.</h3>
+            <h3 style="color: #FFA500;">Use outro serviço para fazer login.</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            Não há serviços de autenticação externa configurados. Veja este <a href="https://go.microsoft.com/fwlink/?LinkID=532715">artigo sobre como configurar esta aplicação ASP.NET para suportar login via serviços externos</a>.
+                            Não há serviços de autenticação externa configurados. 
                         </p>
                     </div>
                 }
@@ -67,6 +67,7 @@
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins!)
+
                                 {
                                     <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Entrar usando sua conta @provider.DisplayName">@provider.DisplayName</button>
                                 }
