--- a/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -7,7 +7,7 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h3>@ViewData["Title"]</h3>
+<h3 style="color: #FFA500;">@ViewData["Title"]</h3>
 @{
     var consentFeature = HttpContext.Features.Get<ITrackingConsentFeature>();
     @if (consentFeature?.CanTrack ?? true)
@@ -46,7 +46,7 @@
             <a asp-page="./GenerateRecoveryCodes" class="btn btn-primary">Redefinir códigos de recuperação</a>
         }
 
-        <h4>Aplicativo autenticador</h4>
+        <h4 style="color: white;">Aplicativo autenticador</h4>
         @if (!Model.HasAuthenticator)
         {
             <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary">Adicionar aplicativo autenticador</a>
