--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -12,7 +12,7 @@
 <h1 style="color: #FFA500;">Gerencie sua conta</h1>
 
 <div>
-    <h2 style="color: #FFA500;">Altere as configurações da sua conta</h2>
+    <h2 style="color: white;">Altere as configurações da sua conta</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
