--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center mt-5">
-    <h1 class="display-4 fade-in">
+    <h1 style="color: #FFA500;" class="display-4 fade-in">
         ControlQuest.
     </h1>
     <p class="fade-in fs-4">
