--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Entrar</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-dark">Entrar</button>
                 </div>
                 <div>
                     <p>
