--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -14,7 +14,7 @@
             <strong>Excluir esses dados removerá permanentemente sua conta, e isso não pode ser recuperado.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Baixar</button>
+            <button class="btn btn-dark" type="submit">Baixar</button>
         </form>
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Excluir</a>
