--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
     <footer class="footer text-muted text-center py-3">
         <div class="container">
             &copy; 2024 - LVL-UP Store - Todos os direitos reservados
-            <a href="/" class="btn btn-link">Voltar para loja</a>
+            <a href="/" style="color: #FFA500;"  class="btn btn-link">Voltar para loja</a>
         </div>
     </footer>
 
