--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -10,14 +10,37 @@
     {
         <li class="nav-item">
             <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                Olá, @(UserManager.GetUserAsync(User).Result.FullName.Split(' ').FirstOrDefault())!
+                Bem vindo, @(UserManager.GetUserAsync(User).Result.FullName.Split(' ').FirstOrDefault())!
             </a>
         </li>
-        <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button style="color: #808080" id="logout" type="submit" class="nav-link btn btn-link">Sair</button>
-            </form>
-        </li>
+        <!-- User avatar -->
+        <div class="dropdown">
+            <a class="dropdown-toggle d-flex align-items-center hidden-arrow"
+               href="#"
+               id="navbarDropdownMenuAvatar"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/Default_pfp.jpg"
+                     class="rounded-circle"
+                     height="30"
+                     alt="User Avatar"
+                     loading="lazy" />
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="navbarDropdownMenuAvatar">
+
+                <li>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Configurações</a>
+                </li>
+
+                <li>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home")">
+                        Sair
+                    </a>
+                </li>
+            </ul>
+        </div>
     }
 
     else
