--- a/Views/Store/GameInfo.cshtml
+++ b/Views/Store/GameInfo.cshtml
@@ -47,5 +47,9 @@
 
 <!-- Botão para voltar à lista de jogos -->
 <div class="text-center mt-4">
-    <a href="@Url.Action("Index", "Store")" class="btn btn-primary">Voltar para a loja</a>
+    <a href="@Url.Action("Index", "Store")" class="btn btn-dark" style="color: white !important;">
+        Voltar para a loja
+    </a>
+
+
 </div>
