--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -21,12 +21,15 @@
                role="button"
                data-bs-toggle="dropdown"
                aria-expanded="false">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/Default_pfp.jpg"
+                <img src="@((UserManager.GetUserAsync(User).Result.ProfilePictureUrl != null && UserManager.GetUserAsync(User).Result.ProfilePictureUrl != "")
+                ? UserManager.GetUserAsync(User).Result.ProfilePictureUrl
+                : "https://upload.wikimedia.org/wikipedia/commons/a/ac/Default_pfp.jpg")"
                      class="rounded-circle"
-                     height="30"
+                     height="50"
                      alt="User Avatar"
                      loading="lazy" />
             </a>
+
             <ul class="dropdown-menu dropdown-menu-end"
                 aria-labelledby="navbarDropdownMenuAvatar">
 
@@ -35,9 +38,11 @@
                 </li>
 
                 <li>
-                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home")">
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Account/Login", new { area = "Identity" })">
                         Sair
                     </a>
+
+
                 </li>
             </ul>
         </div>
