--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -50,7 +50,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Deals">Promoções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="NewReleases">Novidades</a>
+                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="AboutUs">Sobre Nós</a>
                         </li>
                     </ul>
                     <!-- Search box centered -->
