--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -44,10 +44,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Games">Jogos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Privacy">Política de Privacidade</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Deals">Promoções</a>
+                            <a class="nav-link" asp-area="" asp-controller="Store" asp-action="Contact">Contato</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Store" asp-action="AboutUs">Sobre Nós</a>
