--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,9 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Games" asp-action="Index">Games</a>
                         </li>
-                        <li class="nav-item">
+@*                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Reviews" asp-action="Index">Reviews</a>
-                        </li>
+                        </li> *@
                     </ul>
 
                     <!-- Search Form -->
