--- a/Views/Store/AboutUs.cshtml
+++ b/Views/Store/AboutUs.cshtml
@@ -25,7 +25,7 @@
         <div class="col-md-6 text-center">
             <h4 class="text-warning">Raul Silveira</h4>
             <p class="text-light">Auxiliar de Desenvolvimento de Sistemas na Sul Engenharia de Sistemas</p>
-            <img src="https://media.licdn.com/dms/image/v2/D4D03AQHfs3tQ-hGcjw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1731377919896?e=1739404800&v=beta&t=Sh2BGQdDxAkuQdukrSe62irvrQdXMgyQd65rZlHPuF4"
+            <img src="https://avatars.githubusercontent.com/u/130875965?v=4"
                  alt="Raul Silveira" class="rounded-circle shadow" style="max-width: 180px; border: 3px solid #FFA500;" />
             <p class="mt-3">
                 Raul é um profissional com experiência na área de desenvolvimento de sistemas, atuando como Auxiliar de Desenvolvimento de Sistemas na Sul Engenharia de Sistemas.
@@ -35,7 +35,7 @@
         <div class="col-md-6 text-center">
             <h4 class="text-warning">Alexandre Costa</h4>
             <p class="text-light">Estagiário de Back-end na DWU IT Solutions</p>
-            <img src="https://media.licdn.com/dms/image/v2/D4D35AQGdlmhMyyNTbQ/profile-framedphoto-shrink_800_800/profile-framedphoto-shrink_800_800/0/1720455840280?e=1734375600&v=beta&t=ow-NR9FeysLacFfWcUn6tn4CPtWyR4F3xa1tz-DhVCU"
+            <img src="https://avatars.githubusercontent.com/u/113725219?v=4"
                  alt="Alexandre Costa" class="rounded-circle shadow" style="max-width: 180px; border: 3px solid #FFA500;" />
             <p class="mt-3">
                 Alexandre é estagiário de back-end, trazendo um olhar focado em soluções técnicas e práticas de desenvolvimento na DWU IT Solutions.
